kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: kibana-ingress
spec:
  rules:
    - host: nb-172-104-255-70.frankfurt.nodebalancer.linode.com
      http:
        paths:
          - path: /    
            pathType: Exact  
            backend:
              service:
                name: kibana-kibana
                port:
                  number: 5601
